fixed background cut off

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,9 +37,17 @@ body {
   padding-right: 10px;
 
 }
-html, body, #app, #app>div {
-  height: 100%
+
+body, #app, #app>div {
+  height: 100%;
+  max-height: 100% !important;
+  padding-bottom: 10% !important;
 }
+
+html{
+  background-color: inherit !important;
+}
+
 .topnav li {
   float: left;
   color: #f2f2f2;
